# TTSmateV1

./: .gitignore  API文档.md  Cargo.toml  Git提交计划总结.md  Git版本控制和工作流.md  README.md  Rust开发指南.md  TODO清单.md  TTS API更新说明.md  TTSmate_task.md  build.rs  config.example.toml  config.toml  sshkey.md  ttsServer.md  原题目.md  测试文档.md  设计文档.md  软件需求分析编写样板.md  需求分析.md  项目完成报告.md  项目文档总览.md  项目状态总结.md
src/: api_client.rs  config.rs  error.rs  lib.rs  main.rs
src/ai/: content.rs  generator.rs  mod.rs  template.rs
src/audio/: device.rs  mod.rs  player.rs  router.rs  stream.rs
src/config/: app_config.rs  config_manager.rs  mod.rs
src/soundboard/: board.rs  keybinding.rs  mod.rs  sound.rs
src/tts/: cache.rs  client.rs  error.rs  mod.rs
src/ui/: app.rs  mod.rs
src/ui/components/: mod.rs
src/ui/panels/: mod.rs
src/utils/: helpers.rs  logger.rs  mod.rs
tests/: integration_test.rs
程序相关报告/: README.txt  TTSmate V1 API接口文档.docx  TTSmate V1 测试文档.docx  TTSmate V1 系统设计文档.docx  TTSmate V1 系统需求说明书.docx
