[package]
name = "ttsmate"
version = "1.0.0"
edition = "2021"
authors = ["TTSmate Team <team@ttsmate.com>"]
description = "智能语音合成客户端 - TTSmate V1"
license = "MIT"
repository = "https://github.com/ttsmate/ttsmate"
keywords = ["tts", "ai", "audio", "voice", "synthesis"]
categories = ["multimedia::audio", "gui"]

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "stream"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 音频处理
rodio = "0.17"
cpal = "0.15"

# UI框架
egui = "0.24"
eframe = { version = "0.24", features = ["default_fonts"] }

# 配置管理
config = "0.13"
toml = "0.8"

# 日志
log = "0.4"
env_logger = "0.10"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 数据库 (SQLite)
rusqlite = { version = "0.29", features = ["bundled"] }

# 系统集成
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }
windows = { version = "0.48", features = ["Win32_Media_Audio"] }

# 加密
aes-gcm = "0.10"
rand = "0.8"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 文件系统
walkdir = "2.3"

# UUID生成
uuid = { version = "1.0", features = ["v4"] }

# Base64编解码
base64 = "0.21"

[dev-dependencies]
# 测试框架
tokio-test = "0.4"
mockall = "0.11"
criterion = "0.5"

[build-dependencies]
# Windows资源编译
winres = "0.1"

[[bin]]
name = "ttsmate"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
