[package]
name = "TTSmateV1"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28.1"
egui = "0.27.2"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
rodio = "0.18.0"
toml = "0.8.12"
log = "0.4"
env_logger = "0.11.3"
rfd = "0.14.1"
